--- a/client/styles/layout.styl
+++ b/client/styles/layout.styl
@@ -14,3 +14,12 @@ a
   width 90%
   max-width 900px
   margin 2rem auto
+
+.errors
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  background: white
+  color: gray
+  padding: 1rem 5rem
